apps/docs/content/docs/core/v0.1/concepts/index.mdx
---
title: Concepts
description: The core ideas behind the sandbox client — what things are and how they relate.
---

<Cards>
  <Card
    href="/docs/core/v0.1/concepts/workflows"
    title="Workflows"
    description="What a workflow is, how it's defined, and how it runs."
  />
  <Card
    href="/docs/core/v0.1/concepts/sandboxes"
    title="Sandboxes"
    description="Isolated Docker containers managed by OpenSandbox."
  />
  <Card
    href="/docs/core/v0.1/concepts/environments"
    title="Environments"
    description="Define a setup recipe once, snapshot it, and spawn isolated sandboxes from it on demand."
  />
  <Card
    href="/docs/core/v0.1/concepts/steps"
    title="Steps"
    description="The unit of work — leaf steps and control-flow steps."
  />
  <Card
    href="/docs/core/v0.1/concepts/refs-and-state"
    title="Refs & state"
    description="How to capture step output and thread values through a workflow."
  />
  <Card
    href="/docs/core/v0.1/concepts/event-stream"
    title="Event stream"
    description="The AsyncIterable that streams events as steps execute."
  />
  <Card
    href="/docs/core/v0.1/concepts/storage-adapters"
    title="Storage adapters"
    description="How the ledger persists every event for durability and replay."
  />
</Cards>
