apps/docs/content/docs/core/v0.2/concepts/index.mdx
---
title: Concepts
description: The core ideas behind the sandbox client — what things are and how they relate.
---

<Cards>
  <Card
    href="/docs/core/0.2/concepts/workflows"
    title="Workflows"
    description="What a workflow is, how it's defined, and how it runs."
  />
  <Card
    href="/docs/core/0.2/concepts/sandboxes"
    title="Sandboxes"
    description="Isolated Docker containers managed by OpenSandbox."
  />
  <Card
    href="/docs/core/0.2/concepts/environments"
    title="Environments"
    description="Define a setup recipe once, snapshot it, and spawn isolated sandboxes from it on demand."
  />
  <Card
    href="/docs/core/0.2/concepts/steps"
    title="Steps"
    description="The unit of work — leaf steps and control-flow steps."
  />
  <Card
    href="/docs/core/0.2/concepts/refs-and-state"
    title="Refs & state"
    description="How to capture step output and thread values through a workflow."
  />
  <Card
    href="/docs/core/0.2/concepts/event-stream"
    title="Event stream"
    description="The AsyncIterable that streams events as steps execute."
  />
  <Card
    href="/docs/core/0.2/concepts/storage-adapters"
    title="Storage adapters"
    description="How the ledger persists every event for durability and replay."
  />
  <Card
    href="/docs/core/0.2/concepts/credentials"
    title="Credentials"
    description="Inject credentials into outbound requests without the sandbox process ever holding them."
  />
</Cards>
